# lexicards

./: README.md  pyproject.toml
.github/workflows/: lexicards-ci-cd.yml
lexicards/: data_retriever.py  errors.py  lexicard_controller.py  main.py  resources.py  ui.py
lexicards/audio/: audio_service.py
lexicards/controllers/: data_loader.py  data_retriever.py  data_saver.py  lexi_ui.py  lexical_controller.py
lexicards/core/: singleton_meta.py
lexicards/data/: data_loader.py  data_remover.py  data_retriever.py  data_saver.py  japanese_words.csv
lexicards/errors/: error.py
lexicards/interfaces/: i_data_retriever.py  i_resource_loader.py  i_ui.py
lexicards/interfaces/audio/: i_audio_servcie.py
lexicards/interfaces/controller/: i_controller.py
lexicards/interfaces/data/: i_data_remove.py  i_data_saver.py  i_resource_loader.py
lexicards/interfaces/manager/: i_manager.py
lexicards/interfaces/ui/: i_ui_base.py  i_ui_builder.py  i_ui_director.py  i_ui_mac.py  i_ui_mac_builder.py  i_ui_manager.py  i_ui_orchestrator.py
lexicards/manager/: word_manager.py
lexicards/ui/: lexi_ui.py
lexicards/ui/builders/: base_builder.py  desktop_builder.py  desktop_ui_builder.py  mac_builder.py  mac_ui_builder.py
lexicards/ui/components/: desktop_ui.py  mac_ui.py
lexicards/ui/director/: ui_desktop_director.py  ui_director.py  ui_mac_director.py
lexicards/ui/manager/: ui_manager.py
tests/audio/: test_audio_service.py
tests/controller/: test_controller.py
tests/data/: test_data_service.py
tests/manager/: test_manager.py
(+6 files in other folders)
